--- a/basketball/public/mix-manifest.json
+++ b/basketball/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
+    "/js/tactics.js": "/js/tactics.js",
     "/css/app.css": "/css/app.css",
-    "/js/app.js.map": "/js/app.js.map",
+    "/js/tactics.js.map": "/js/tactics.js.map",
     "/css/app.css.map": "/css/app.css.map"
 }
